[package]
name = "acled_api"
version = "0.1.0"
edition = "2021"
authors = ["Tom Schuster <evilpies@gmail.com>", "ACLED Data Team <data@acleddata.com>"]
license = "MIT"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = "0.4"
strum = { version = "0.26", features = ["derive"] }
